--- a/_includes/approaches.html
+++ b/_includes/approaches.html
@@ -1,5 +1,7 @@
-{% assign approaches = site.data.therapy_cove.approaches %}
-{% assign site_nav = site.data.therapy_cove.site_nav %}
+{% assign data_lang = page.lang | default: site.active_lang | default: site.default_lang | default: site.lang | default: 'el' %}
+{% assign cove = site.data[data_lang].therapy_cove | default: site.data.therapy_cove %}
+{% assign approaches = cove.approaches %}
+{% assign site_nav = cove.site_nav %}
 {% assign approaches_label = '' %}
 {% for link in site_nav.links %}
   {% if link.href == '#approaches' %}
