--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
-{% assign footer = site.data.therapy_cove.footer %}
-{% assign site_nav = site.data.therapy_cove.site_nav %}
+{% assign data_lang = page.lang | default: site.active_lang | default: site.default_lang | default: site.lang | default: 'el' %}
+{% assign cove = site.data[data_lang].therapy_cove | default: site.data.therapy_cove %}
+{% assign footer = cove.footer %}
+{% assign site_nav = cove.site_nav %}
 <footer class="cove-footer">
   <div class="cove-shell">
     <div class="cove-footer-content">
