--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   {{ content }}
   <script defer src="{{ '/assets/vendor/flowbite/flowbite.min.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/anchor-center.js' | relative_url }}"></script>
+  <script defer src="{{ '/assets/vendor/scrollama/scrollama.min.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/approaches-tabs.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/lang-toggle.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
