--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   <script defer src="{{ '/assets/js/anchor-center.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/vendor/scrollama/scrollama.min.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/approaches-tabs.js' | relative_url }}"></script>
+  <script defer src="{{ '/assets/js/nav-drawer.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/lang-toggle.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
 </body>
