fix: add explicit logo dimensions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
         <img
           alt="{{ footer.logo_alt }}"
           src="{{ '/assets/images/therapy-cove-logo.png' | relative_url }}"
+          width="1584"
+          height="1584"
           class="cove-footer-logo-image"
         >
       </a>
