--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -13,6 +13,8 @@
       <img
         alt="{{ site_nav.logo_alt }}"
         src="{{ '/assets/images/therapy-cove-logo.png' | relative_url }}"
+        width="1584"
+        height="1584"
         class="cove-hero-logo drop-shadow-[0_18px_40px_rgba(51,51,51,0.18)]"
       >
     </div>
