--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -23,6 +23,8 @@
         <img
           alt="{{ site_nav.logo_alt }}"
           src="{{ '/assets/images/log-vector.svg' | relative_url }}"
+          width="1314"
+          height="326"
           class="cove-logo-image"
         >
     </a>
@@ -64,6 +66,8 @@
           <img
             alt="{{ site_nav.logo_alt }}"
             src="{{ '/assets/images/log-vector.svg' | relative_url }}"
+            width="1314"
+            height="326"
             class="cove-nav-drawer-logo"
           >
           <label class="cove-nav-close" for="cove-nav-toggle" aria-label="Close navigation">×</label>
